[gd_scene load_steps=3 format=3 uid="uid://x3pv3f8pwmgn"]

[ext_resource type="Texture2D" uid="uid://brljf2g4erona" path="res://UI/hamburger-menu_delapouite.png" id="1_5i626"]
[ext_resource type="Script" path="res://class_regions/variables/var_container.gd" id="1_w0ttc"]

[node name="VarContainer" type="PanelContainer"]
script = ExtResource("1_w0ttc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"PanelDisplay"

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SubLabel"
text = "none"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "v_name"

[node name="DefValLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EditButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("1_5i626")
expand_icon = true

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.596078)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "var v_name"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/EditButton" to="." method="request_edit"]
